new-routes-phones
Criação, das rotas referente ao telefone, controllers, services, factories e test's
